fix: spacing

--- a/src/components/_cards/AboutItem/AboutItem.module.scss
+++ b/src/components/_cards/AboutItem/AboutItem.module.scss
@@ -2,6 +2,10 @@
   margin-bottom: var(--spacing-md);
   color: var(--color-text-3);
 
+  &:last-child {
+    margin-bottom: 0;
+  }
+
   strong {
     color: var(--color-text-1);
     font-weight: 800;
