--- a/src/components/_cards/Experience/Experience.module.scss
+++ b/src/components/_cards/Experience/Experience.module.scss
@@ -47,6 +47,10 @@
     .listItem {
       margin-bottom: var(--spacing-md);
 
+      &:last-child {
+        margin-bottom: 0;
+      }
+
       &::before {
         display: inline-block;
         width: 1em;
