--- a/src/components/_cards/Skill/Skill.module.scss
+++ b/src/components/_cards/Skill/Skill.module.scss
@@ -26,6 +26,7 @@
   p {
     color: var(--color-text-1);
     font-weight: 500;
+    line-height: 1;
   }
 }
 
